--- a/Credenciamento.Application/Credenciamento.Application.csproj
+++ b/Credenciamento.Application/Credenciamento.Application.csproj
@@ -4,4 +4,22 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Commands\" />
+    <Folder Include="Contracts\" />
+    <Folder Include="Handlers\" />
+    <Folder Include="Models\" />
+    <Folder Include="Validators\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="13.0.1" />
+    <PackageReference Include="MediatR" Version="13.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Credenciamento.Infrastructure\Credenciamento.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
