--- a/Credenciamento.Infrastructure/Credenciamento.Infrastructure.csproj
+++ b/Credenciamento.Infrastructure/Credenciamento.Infrastructure.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.23" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.23" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Credenciamento.Domain\Credenciamento.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
