--- a/Credenciamento.Web/Credenciamento.Web.csproj
+++ b/Credenciamento.Web/Credenciamento.Web.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Credenciamento.Application\Credenciamento.Application.csproj" />
+  </ItemGroup>
+
 </Project>
