--- a/Credenciamento.Web/Properties/launchSettings.json
+++ b/Credenciamento.Web/Properties/launchSettings.json
@@ -17,11 +17,18 @@
     },
     "Credenciamento.Web": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
       "launchBrowser": true,
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "localhost": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "applicationUrl": "http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "localhost"
       }
     }
   }
