--- a/Credenciamento.Shared/Credenciamento.Shared.csproj
+++ b/Credenciamento.Shared/Credenciamento.Shared.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <nowarn>CS8600,CS8601,CS8602,CS8603,CS8604</nowarn>
   </PropertyGroup>
 
 </Project>
