--- a/Credenciamento.Web/appsettings.localhost.json
+++ b/Credenciamento.Web/appsettings.localhost.json
@@ -3,10 +3,15 @@
     "DefaultConnection": "Server=localhost;Database=impacta-credenciamento;user=sa;password=123456;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Environment": {
+    "BaseUrl": "https://home.netrun.app",
     "Smtp": {
       "Host": "192.168.51.201",
       "Port": 25,
       "Sender": "noreply@netrunwebsites.net"
+    },
+    "QrCode": {
+      "Endpoint": "http://192.168.53.111:8000/qrcode",
+      "Token": "HsWUlTBeOVmTZ7w8unOEzhQsp/z1zilYQrsHOGAFCWU="
     }
   }
 }
