--- a/Credenciamento.Domain/Credenciamento.Domain.csproj
+++ b/Credenciamento.Domain/Credenciamento.Domain.csproj
@@ -6,6 +6,10 @@
 		<NoWarn>CS8600,CS8602,CS8632</NoWarn>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <DebugType>none</DebugType>
+	</PropertyGroup>
+
 	<ItemGroup>
 	  <ProjectReference Include="..\Credenciamento.Shared\Credenciamento.Shared.csproj" />
 	</ItemGroup>
