--- a/Credenciamento.Infrastructure/Credenciamento.Infrastructure.csproj
+++ b/Credenciamento.Infrastructure/Credenciamento.Infrastructure.csproj
@@ -6,6 +6,10 @@
 		<NoWarn>CS8600,CS8602,CS8632</NoWarn>
 	</PropertyGroup>
 
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+	  <DebugType>none</DebugType>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.23" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.23" />
