--- a/Credenciamento.Shared/Credenciamento.Shared.csproj
+++ b/Credenciamento.Shared/Credenciamento.Shared.csproj
@@ -7,4 +7,8 @@
 	  <nowarn>CS8600,CS8601,CS8602,CS8603,CS8604</nowarn>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+  </PropertyGroup>
+
 </Project>
